[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"

dependencies = [
    "agent-client-protocol>=0.7.1",
    "altair>=5.0.0",
    "anywidget>=0.9.0",
    "fastmcp>=2.11.0",
    "formulas>=1.3.3",
    "google-genai>=1.3.0",
    "google-generativeai>=0.8.4",
    "manim>=0.18.0",
    "marimo>=0.9.0",
    "mcp>=1.25.0",
    "numpy>=2.0.0",
    "openai>=1.0.0",
    "openpyxl>=3.1.0",
    "polars>=1.0.0",
    "proselint>=0.13.0",
    "pyarrow>=22.0.0",
    "python-dotenv>=1.0.0",
    "python-lsp-server>=1.10.0",
    "python-salsa",
    "ruff>=0.4.0",
    "scikit-learn>=1.5.0",
    "scipy>=1.13.0",
    "spacy>=3.7.0",
    "sqlalchemy>=2.0.45",
    "sympy>=1.13.1",
    "torch>=2.2.0",
    "traitlets>=5.0.0",
    "transformers",
    "ty>=0.0.1a34",
    "zstandard>=0.25.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/scratch"]

[tool.uv.sources]
torch = { path = "/Users/timwigmore-welsh/Projects/pytorch/dist/torch-2.11.0a0+git3854d69-cp313-cp313-macosx_15_0_x86_64.whl" }
python-salsa = { path = "src/python-salsa", editable = true }

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-timeout>=2.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--timeout=15",
]
markers = [
    "asyncio: mark test as async",
]

[tool.mypy]
# Basic configuration
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true

# Strictness
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

# Error output
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = "google.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "acp.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mcp.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "agent.*"
disallow_untyped_defs = true
disallow_any_generics = true
warn_return_any = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pyright]
include = ["src/agent"]
exclude = ["**/__pycache__", "**/node_modules", "**/.pytest_cache"]
pythonVersion = "3.13"
pythonPlatform = "Darwin"
typeCheckingMode = "basic"
useLibraryCodeForTypes = true
reportMissingImports = "warning"
reportMissingTypeStubs = "none"
reportImportCycles = "error"
reportUnusedImport = "none"
reportUnusedClass = "none"
reportUnusedFunction = "none"
reportUnusedVariable = "none"
reportDuplicateImport = "warning"
reportOptionalSubscript = "error"
reportOptionalMemberAccess = "error"
reportOptionalCall = "error"
reportOptionalIterable = "error"
reportOptionalContextManager = "error"
reportOptionalOperand = "error"
reportTypedDictNotRequiredAccess = "error"
reportConstantRedefinition = "error"
reportIncompatibleMethodOverride = "error"
reportIncompatibleVariableOverride = "error"
reportInconsistentConstructor = "error"
reportMissingParameterType = "warning"
reportMissingTypeArgument = "warning"
reportInvalidTypeVarUse = "error"
reportUnnecessaryIsInstance = "none"
reportUnnecessaryCast = "warning"
reportUndefinedVariable = "error"
reportUnboundVariable = "error"
reportInvalidStubStatement = "error"
reportUnusedCoroutine = "error"
reportGeneralTypeIssues = "error"
reportArgumentType = "error"
reportAssignmentType = "error"
reportAttributeAccessIssue = "error"
reportCallIssue = "error"
reportIndexIssue = "error"
reportOperatorIssue = "error"
reportRedeclaration = "error"
reportReturnType = "error"
reportTypeCommentUsage = "error"
reportUnreachable = "warning"
reportAbstractUsage = "error"
reportPossiblyUnboundVariable = "warning"
reportMissingModuleSource = "none"
reportUnknownParameterType = "none"
reportUnknownArgumentType = "none"
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "C901", # mccabe complexity
    "PLC0415", # import outside top-level (prohibits imports in functions)
]
ignore = [
    "E501",  # line too long, handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["scratch", "agent", "python_salsa"]
