[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-tools"
version = "0.1.0"
description = "MCP tools for web operations"
requires-python = ">=3.13,<3.14"
license = "MIT"

dependencies = [
    "fastmcp>=2.11.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/web-tools"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-timeout>=2.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--timeout=15",
]
markers = [
    "asyncio: mark test as async",
]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "C901",
    "PLC0415",
]
ignore = [
    "E501",
]

[tool.ruff.lint.isort]
known-first-party = ["web_tools"]
