[package]
name = "common-tools"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "common-tools"
path = "src/main.rs"

[dependencies]
rust-mcp-sdk = { version = "0.8.1", default-features = false, features = ["server", "stdio", "macros"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.0"
async-trait = "0.1"
thiserror = "1.0"
rust-mcp-schema = "0.9.4"

[dev-dependencies]
tempfile = "3.0"
uuid = { version = "1.0", features = ["v4"] }
